# folder-organizer

./: .coverage  README.md  SETUP.md  gitignore  main.py  pyproject.toml
assets/: file_formats.py
src/: __init__.py  __main__.py  cli.py  config.py  file_formats.py  logger.py  organizer.py  utils.py
tests/: test_utils.py
